--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,14 +1,5 @@
-.list {
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  list-style-type: none;
-  font-family: 'Lucida Sans', Verdana, sans-serif;
-}
-
-.emptyMessage {
-  margin-top: 70px;
-  color: rgb(2, 55, 17);
-  font-weight: 500;
+.ulBox {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
