--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,63 +1,34 @@
-.form_wrapper {
-  width: 300px;
+.form {
   display: flex;
   flex-direction: column;
-}
-
-.label {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  font-family: 'Lucida Sans', Verdana, sans-serif;
-}
-
-.input {
-  height: 30px;
-  border-radius: 3px;
-  font-size: 18px;
-  font-family: 'Lucida Sans', Verdana, sans-serif;
-}
-
-.button_add {
-  height: 35px;
-  margin-block: 20px;
-  border-radius: 3px;
-  border: none;
-  font-size: 18px;
-  font-weight: 500;
-  font-family: 'Lucida Sans', Verdana, sans-serif;
-  box-shadow: 1px 1px 3px 0px #000000;
-  cursor: pointer;
-  transition: background-color 0.25s ease;
-}
-
-.button_add:hover,
-.button_add:focus {
-  cursor: pointer;
-  border: 2px solid #99ef9c;
-  background-color: #99ef9c;
-  font-weight: 700;
-  color: rgb(2, 55, 17);
+  gap: 20px;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #ccc;
   border-radius: 5px;
+  max-width: 500px;
 }
 
-.icon {
-  position: absolute;
-  top: 1px;
-  left: 5px;
+.formField {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
-.error_name {
-  color: red;
-  font-size: 12px;
-  position: absolute;
-  right: 20px;
-  top: 37px;
+.formLabel {
+  font-weight: bold;
 }
-.error_number {
-  color: red;
-  font-size: 12px;
-  position: absolute;
-  top: 82px;
-  text-align: right;
+
+.btnSubmit {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btnSubmit:hover {
+  background-color: #0056b3;
 }
